--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ next-env.d.ts
 .env
 
 # content-collections
-.content-collections
+# .content-collections
 
 # Created by https://www.toptal.com/developers/gitignore/api/webstorm+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=webstorm+all
